remove some bugs

--- a/index.html
+++ b/index.html
@@ -371,7 +371,7 @@
                     <br>
                     <input type="text" placeholder="Subject">
                     <br>
-                    <textarea type="text" placeholder="message" wrap="off" colls="3" rows="5"></textarea>
+                    <textarea type="text" placeholder="message"  colls="3" rows="5"></textarea>
                     <br>
                     <input type="submit" value="send" id="snd-btn">
                 </form>
