remove eror in html code

--- a/index.html
+++ b/index.html
@@ -380,7 +380,7 @@
     </div>
     <footer>
         <div class="fx-container">
-            <p class="copyright">All right reserved by bandriy kutsak</p>
+            <p class="copyright">All right reserved by andriy kutsak</p>
             <ul class="social">
                 <li><a href=""><img src="img/ico/linkedin.png" alt=""></a></li>
                 <li><a href=""><img src="img/ico/facebook.png" alt=""></a></li>
