--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width" initial-scale="1.0">
+	<meta name="google-site-verification" content="iodnWzeiLnkjG2Vyh7ID95oMPB2jfu1r_iTh1H_Ymvw" />
     <title>skokov</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.css">
     <link rel="stylesheet" href="css/style.css">
